Feat: Add support for multiple image file extensions
Updated the image processing pipeline (Section 2.4, cell bb27a5f4) and class identification (Section 2.3, cell 40f7514e) to correctly find and process image files with .jpg, .jpeg, and .png extensions using glob.glob.

--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNebiwyR7eXi9XSUHx1Ue+8",
+      "authorship_tag": "ABX9TyN/gEzsULgoTF+2dfGQpcP2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,13 +58,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a981b556",
-        "outputId": "c1ec568f-879a-432a-acd4-0b24206ade24"
+        "outputId": "65354676-c4ab-40b9-84d0-5e679fec7b1e"
       },
       "source": [
         "# Install mtcnn library\n",
         "!pip install opencv"
       ],
-      "execution_count": 11,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,13 +95,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7c510c84",
-        "outputId": "94f6a476-7318-4f5f-8a94-cfb3e220eac8"
+        "outputId": "da259659-8115-4dfa-86e7-02802faf055f"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 12,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "id": "29c5d6a5"
       },
       "source": [
-        "### 1.1. Import Core Libraries (Impor Library Utama)\n",
+        "### **1.1. Import Core Libraries (Impor Library Utama)**\n",
         "\n",
         "**Penjelasan:** Mengimpor library utama seperti tensorflow, keras, numpy, matplotlib, os, zipfile, cv2 (OpenCV), glob, shutil yang akan digunakan sepanjang proyek ini."
       ]
@@ -159,7 +159,7 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "import seaborn as sns # For confusion matrix visualization"
       ],
-      "execution_count": 13,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
         "# NUM_CLASSES will be determined by the data generator later\n",
         "NUM_CLASSES = None # Placeholder"
       ],
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
       "metadata": {
         "id": "1mmwlN92LofO"
       },
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "454e6dae",
-        "outputId": "f85f0623-e28b-42c5-d844-caca3b588dc5"
+        "outputId": "803fb063-25c2-4963-dfc2-fa3948cd815a"
       },
       "source": [
         "print(f\"Extracting {ZIP_PATH} to {RAW_DATA_PATH}...\")\n",
@@ -281,7 +281,7 @@
         "    print(\"\\nWarning: Could not identify the main folder containing raw images within the extracted directory.\")\n",
         "    print(\"Please manually inspect the extracted contents and update RAW_DATA_PATH if necessary.\")"
       ],
-      "execution_count": 15,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "30b5147d",
-        "outputId": "ebb9d03d-3ea4-4a6e-d95f-ec95bc5f37b6"
+        "outputId": "f84295a1-0669-4f8f-de02-951d1b9ba25b"
       },
       "source": [
         "# Remove the Haar Cascade XML file loading as we are no longer using it\n",
@@ -340,7 +340,7 @@
         "print(\"OpenCV Haar Cascade initialization skipped as face detection is being replaced by simple cropping.\")\n",
         "face_cascade = None # Explicitly set to None as it's not used"
       ],
-      "execution_count": 16,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +369,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "40f7514e",
-        "outputId": "b833780c-6cbb-43a7-f03e-2276c35ce1f1"
+        "outputId": "bcab2919-59e5-44e4-f8fc-deba3957dce5"
       },
       "source": [
         "# Remove existing processed directory if it exists to start fresh\n",
@@ -396,10 +396,13 @@
         "raw_test_folder = os.path.join(RAW_DATA_PATH, 'Data Test')\n",
         "\n",
         "all_raw_image_files = []\n",
+        "# Use glob to find files with multiple extensions\n",
         "if os.path.exists(raw_train_folder):\n",
-        "    all_raw_image_files.extend(glob.glob(os.path.join(raw_train_folder, '*.jpg')))\n",
+        "    for ext in ['*.jpg', '*.jpeg', '*.png']:\n",
+        "        all_raw_image_files.extend(glob.glob(os.path.join(raw_train_folder, ext)))\n",
         "if os.path.exists(raw_test_folder):\n",
-        "    all_raw_image_files.extend(glob.glob(os.path.join(raw_test_folder, '*.jpg')))\n",
+        "    for ext in ['*.jpg', '*.jpeg', '*.png']:\n",
+        "        all_raw_image_files.extend(glob.glob(os.path.join(raw_test_folder, ext)))\n",
         "\n",
         "\n",
         "# Extract unique NIMs (first 10 characters of filename)\n",
@@ -421,7 +424,7 @@
         "NUM_CLASSES = len(class_nims)\n",
         "print(f\"Updated NUM_CLASSES: {NUM_CLASSES}\")"
       ],
-      "execution_count": 22,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +459,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bb27a5f4",
-        "outputId": "108463b4-a756-4f3c-9570-e79c7d9a1b39"
+        "outputId": "750330d5-e197-4000-8646-d35b3143db97"
       },
       "source": [
         "def process_and_save_faces_by_split(raw_train_dir, raw_test_dir, processed_train_dir, processed_test_dir, img_width, img_height):\n",
@@ -464,7 +467,7 @@
         "    Processes images directly from raw train and test directories by performing a simple\n",
         "    center crop and resize, extracting class name (NIM) from the filename,\n",
         "    and saves them to the corresponding processed train and test directories\n",
-        "    under the correct class subfolder. Assumes filenames are in the format NIM_...jpg.\n",
+        "    under the correct class subfolder. Assumes filenames are in the format NIM_...jpg/png/jpeg.\n",
         "\n",
         "    Args:\n",
         "        raw_train_dir (str): Directory containing raw training images (all in one folder per split).\n",
@@ -481,7 +484,9 @@
         "    print(f\"\\nStarting simple center cropping for training data from {raw_train_dir}...\")\n",
         "\n",
         "    # Process training data - iterate directly through image files\n",
-        "    image_files_train = glob.glob(os.path.join(raw_train_dir, '*.jpg'))\n",
+        "    image_files_train = []\n",
+        "    for ext in ['*.jpg', '*.jpeg', '*.png']:\n",
+        "        image_files_train.extend(glob.glob(os.path.join(raw_train_dir, ext)))\n",
         "    # print(f\"Found {len(image_files_train)} images in {raw_train_dir} for training\") # Debug print\n",
         "\n",
         "    for img_path in image_files_train:\n",
@@ -542,7 +547,9 @@
         "    print(f\"\\nStarting simple center cropping for testing data from {raw_test_dir}...\")\n",
         "\n",
         "    # Process testing data - iterate directly through image files\n",
-        "    image_files_test = glob.glob(os.path.join(raw_test_dir, '*.jpg'))\n",
+        "    image_files_test = []\n",
+        "    for ext in ['*.jpg', '*.jpeg', '*.png']:\n",
+        "        image_files_test.extend(glob.glob(os.path.join(raw_test_dir, ext)))\n",
         "    # print(f\"Found {len(image_files_test)} images in {raw_test_dir} for testing\") # Debug print\n",
         "\n",
         "    for img_path in image_files_test:\n",
@@ -620,24 +627,14 @@
         "        img_height=IMG_HEIGHT\n",
         "    )"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Starting simple center cropping for training data from /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0/Data Train...\n",
-            "\n",
-            "Simple center cropping for training data complete.\n",
-            "Total training images processed: 1665\n",
-            "Training images skipped (error): 0\n",
-            "\n",
-            "Starting simple center cropping for testing data from /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0/Data Test...\n",
-            "\n",
-            "Simple center cropping for testing data complete.\n",
-            "Total testing images processed: 416\n",
-            "Testing images skipped (error): 0\n"
+            "Starting simple center cropping for training data from /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0/Data Train...\n"
           ]
         }
       ]
@@ -656,11 +653,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "197aac03",
-        "outputId": "0f2e55eb-7664-43f4-920e-6d0b3d9224e2"
+        "id": "197aac03"
       },
       "source": [
         "# Count images in processed directories\n",
@@ -677,48 +670,58 @@
         "    if os.path.isdir(class_path):\n",
         "        processed_train_class_counts[class_folder] = len(os.listdir(class_path))\n",
         "\n",
-        "print(f\"\\nJumlah kelas (mahasiswa) di Data Train (setelah proses): {len(processed_train_class_counts)}\")\n",
-        "# print(\"Jumlah gambar per kelas di Data Train (setelah proses):\")\n",
-        "# for cls, count in processed_train_class_counts.items():\n",
-        "#     print(f\"  {cls}: {count}\")\n",
-        "\n",
         "processed_test_class_counts = {}\n",
         "for class_folder in os.listdir(PROCESSED_TEST_DIR):\n",
         "    class_path = os.path.join(PROCESSED_TEST_DIR, class_folder)\n",
         "    if os.path.isdir(class_path):\n",
         "        processed_test_class_counts[class_folder] = len(os.listdir(class_path))\n",
         "\n",
-        "print(f\"Jumlah kelas (mahasiswa) di Data Test (setelah proses): {len(processed_test_class_counts)}\")\n",
-        "# print(\"Jumlah gambar per kelas di Data Test (setelah proses):\")\n",
-        "# for cls, count in processed_test_class_counts.items():\n",
-        "#     print(f\"  {cls}: {count}\")\n",
+        "print(f\"\\nJumlah kelas (mahasiswa) di Data Train (sebelum filter): {len(processed_train_class_counts)}\")\n",
+        "print(f\"Jumlah kelas (mahasiswa) di Data Test (sebelum filter): {len(processed_test_class_counts)}\")\n",
+        "\n",
+        "\n",
+        "# --- Tambahan Kode untuk Menampilkan Tabel Distribusi Kelas ---\n",
+        "\n",
+        "print(\"\\nTabel Distribusi Jumlah Gambar per Kelas (Data Train):\")\n",
+        "if processed_train_class_counts:\n",
+        "    # Convert dictionary to DataFrame for better display\n",
+        "    train_counts_df = pd.DataFrame(list(processed_train_class_counts.items()), columns=['NIM (Kelas)', 'Jumlah Gambar'])\n",
+        "    # Sort by NIM for consistent order\n",
+        "    train_counts_df = train_counts_df.sort_values(by='NIM (Kelas)').reset_index(drop=True)\n",
+        "    display(train_counts_df)\n",
+        "else:\n",
+        "    print(\"Tidak ada data kelas di Data Train yang diproses.\")\n",
+        "\n",
+        "\n",
+        "print(\"\\nTabel Distribusi Jumlah Gambar per Kelas (Data Test):\")\n",
+        "if processed_test_class_counts:\n",
+        "    # Convert dictionary to DataFrame for better display\n",
+        "    test_counts_df = pd.DataFrame(list(processed_test_class_counts.items()), columns=['NIM (Kelas)', 'Jumlah Gambar'])\n",
+        "     # Sort by NIM for consistent order\n",
+        "    test_counts_df = test_counts_df.sort_values(by='NIM (Kelas)').reset_index(drop=True)\n",
+        "    display(test_counts_df)\n",
+        "else:\n",
+        "    print(\"Tidak ada data kelas di Data Test yang diproses.\")\n",
+        "\n",
+        "# --- Akhir Tambahan Kode ---\n",
+        "\n",
         "\n",
         "# Check if the number of classes matches the expected NUM_CLASSES\n",
-        "if len(processed_train_class_counts) == NUM_CLASSES and len(processed_test_class_counts) == NUM_CLASSES:\n",
-        "    print(\"\\nJumlah kelas di direktori proses sesuai dengan jumlah kelas yang terdeteksi.\")\n",
-        "elif len(processed_train_class_counts) != NUM_CLASSES:\n",
-        "    print(f\"\\nWarning: Jumlah kelas di Data Train proses ({len(processed_train_class_counts)}) tidak sesuai dengan jumlah kelas yang terdeteksi ({NUM_CLASSES}).\")\n",
-        "elif len(processed_test_class_counts) != NUM_CLASSES:\n",
-        "     print(f\"\\nWarning: Jumlah kelas di Data Test proses ({len(processed_test_class_counts)}) tidak sesuai dengan jumlah kelas yang terdeteksi ({NUM_CLASSES}).\")\n",
+        "# This check might need adjustment if some classes had 0 images processed\n",
+        "# For now, let's check against the number of folders created in 2.3\n",
+        "num_created_class_folders = len(os.listdir(PROCESSED_TRAIN_DIR)) if os.path.exists(PROCESSED_TRAIN_DIR) else 0\n",
+        "\n",
+        "if len(processed_train_class_counts) == num_created_class_folders and len(processed_test_class_counts) == num_created_class_folders:\n",
+        "    print(f\"\\nJumlah kelas di direktori proses ({len(processed_train_class_counts)} di train, {len(processed_test_class_counts)} di test) sesuai dengan jumlah folder kelas yang dibuat ({num_created_class_folders}).\")\n",
         "else:\n",
-        "     print(\"\\nWarning: Jumlah kelas di direktori proses tidak sesuai dengan jumlah kelas yang terdeteksi.\")"
+        "     print(f\"\\nWarning: Jumlah kelas di direktori proses ({len(processed_train_class_counts)} di train, {len(processed_test_class_counts)} di test) tidak sesuai dengan jumlah folder kelas yang dibuat ({num_created_class_folders}). Ini mungkin terjadi jika ada kelas yang tidak memiliki gambar yang berhasil diproses.\")\n",
+        "\n",
+        "# Update NUM_CLASSES global variable again, based on actually processed classes with images\n",
+        "# This might be redundant if NUM_CLASSES was updated in 2.3 correctly\n",
+        "# NUM_CLASSES = len(processed_train_class_counts) # Or intersection of train/test classes if strict"
       ],
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Jumlah total gambar di Data Train (setelah proses): 1665\n",
-            "Jumlah total gambar di Data Test (setelah proses): 416\n",
-            "\n",
-            "Jumlah kelas (mahasiswa) di Data Train (setelah proses): 53\n",
-            "Jumlah kelas (mahasiswa) di Data Test (setelah proses): 53\n",
-            "\n",
-            "Jumlah kelas di direktori proses sesuai dengan jumlah kelas yang terdeteksi.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -726,7 +729,7 @@
         "id": "df242579"
       },
       "source": [
-        "### 2.6. Inspect Class Distribution (Inspeksi Distribusi Kelas)\n",
+        "### **2.6. Inspect Class Distribution (Inspeksi Distribusi Kelas)**\n",
         "\n",
         "**Penjelasan:** Memvisualisasikan jumlah gambar per kelas di direktori training yang sudah diproses untuk melihat apakah pembagian train/test atau proses deteksi wajah menyebabkan ketidakseimbangan yang signifikan."
       ]
