--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNjhz5q/6wvJZQxMHVTfEAG",
+      "authorship_tag": "ABX9TyPPAyadEt8saILOO56nNAf2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2154,6 +2154,105 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jMaEweRAaK7M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7e67f642"
+      },
+      "source": [
+        "## **Section 3: Data Loading and Augmentation (Pemuatan dan Augmentasi Data)**\n",
+        "\n",
+        "**Penjelasan:** Sekarang kita akan bekerja dengan data yang sudah bersih di `PROCESSED_PATH`. Karena datanya sudah memiliki struktur folder per kelas, kita bisa menggunakan `flow_from_directory` yang lebih efisien dari Keras `ImageDataGenerator`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f1873cfd"
+      },
+      "source": [
+        "### **3.1. Create Data Generators (Membuat Generator Data)**\n",
+        "\n",
+        "**Penjelasan:** Inisialisasi `ImageDataGenerator` untuk training dengan augmentasi (rescale, rotation, shift, zoom, flip) dan satu lagi untuk testing (hanya rescale). Rescaling (membagi nilai piksel dengan 255) penting untuk normalisasi data gambar."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "01797fc7"
+      },
+      "source": [
+        "# Data Augmentation for Training Data\n",
+        "train_datagen = ImageDataGenerator(\n",
+        "    rescale=1./255, # Normalize pixel values to [0, 1]\n",
+        "    rotation_range=20, # Rotate images by up to 20 degrees\n",
+        "    width_shift_range=0.2, # Shift images horizontally\n",
+        "    height_shift_range=0.2, # Shift images vertically\n",
+        "    zoom_range=0.2, # Randomly zoom into images\n",
+        "    horizontal_flip=True, # Randomly flip images horizontally\n",
+        "    fill_mode='nearest' # Fill in missing pixels after augmentations\n",
+        ")\n",
+        "\n",
+        "# Only rescale for Test Data (no augmentation)\n",
+        "test_datagen = ImageDataGenerator(rescale=1./255) # Normalize pixel values"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "808cc4a3"
+      },
+      "source": [
+        "### **3.2. Apply the Generators (Menerapkan Generator)**\n",
+        "\n",
+        "**Penjelasan:** Membuat `train_generator` menggunakan `train_datagen.flow_from_directory()` yang menunjuk ke `PROCESSED_PATH/train` dan `test_generator` menggunakan `test_datagen.flow_from_directory()` yang menunjuk ke `PROCESSED_PATH/test`. Generator ini akan secara otomatis memuat gambar dan label (dari nama folder)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1fba9c65"
+      },
+      "source": [
+        "# Create training data generator\n",
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "    PROCESSED_TRAIN_DIR,\n",
+        "    target_size=(IMG_HEIGHT, IMG_WIDTH), # Resize images to target size\n",
+        "    batch_size=BATCH_SIZE,\n",
+        "    class_mode='categorical', # For multi-class classification\n",
+        "    color_mode='rgb' # Ensure images are treated as color images\n",
+        ")\n",
+        "\n",
+        "# Create validation/test data generator\n",
+        "test_generator = test_datagen.flow_from_directory(\n",
+        "    PROCESSED_TEST_DIR,\n",
+        "    target_size=(IMG_HEIGHT, IMG_WIDTH), # Resize images to target size\n",
+        "    batch_size=BATCH_SIZE,\n",
+        "    class_mode='categorical', # For multi-class classification\n",
+        "    color_mode='rgb', # Ensure images are treated as color images\n",
+        "    shuffle=False # Do not shuffle test data to evaluate consistently\n",
+        ")\n",
+        "\n",
+        "# Update NUM_CLASSES based on the number of classes found by the generator\n",
+        "NUM_CLASSES = train_generator.num_classes\n",
+        "\n",
+        "print(f\"\\nNumber of classes identified by generators: {NUM_CLASSES}\")\n",
+        "print(f\"Class indices: {train_generator.class_indices}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
