--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -2223,7 +2223,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1fba9c65"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1fba9c65",
+        "outputId": "35f45b42-55da-46f7-d9c2-19de3227f5f4"
       },
       "source": [
         "# Create training data generator\n",
@@ -2251,8 +2255,20 @@
         "print(f\"\\nNumber of classes identified by generators: {NUM_CLASSES}\")\n",
         "print(f\"Class indices: {train_generator.class_indices}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 1696 images belonging to 53 classes.\n",
+            "Found 424 images belonging to 53 classes.\n",
+            "\n",
+            "Number of classes identified by generators: 53\n",
+            "Class indices: {'5221911012': 0, '5221911025': 1, '5231811002': 2, '5231811004': 3, '5231811005': 4, '5231811006': 5, '5231811007': 6, '5231811008': 7, '5231811009': 8, '5231811010': 9, '5231811013': 10, '5231811014': 11, '5231811015': 12, '5231811016': 13, '5231811017': 14, '5231811018': 15, '5231811019': 16, '5231811021': 17, '5231811022': 18, '5231811023': 19, '5231811024': 20, '5231811025': 21, '5231811026': 22, '5231811027': 23, '5231811028': 24, '5231811029': 25, '5231811030': 26, '5231811031': 27, '5231811033': 28, '5231811034': 29, '5231811035': 30, '5231811036': 31, '5231811037': 32, '5231811038': 33, '5231811039': 34, '5231911001': 35, '5231911002': 36, '5231911003': 37, '5231911004': 38, '5231911005': 39, '5231911006': 40, '5231911007': 41, '5231911008': 42, '5231911009': 43, '5231911010': 44, '5231911011': 45, '5231911012': 46, '5231911013': 47, '5231911016': 48, '5231911017': 49, '5231911018': 50, '5231911019': 51, '5231911020': 52}\n"
+          ]
+        }
+      ]
     }
   ]
 }
