Section 0: Initial Setup (Pengaturan Awal)

--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPPAyadEt8saILOO56nNAf2",
+      "authorship_tag": "ABX9TyMWS6nSGRRefacXXqYQ/jYK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2269,6 +2269,204 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wqzu7jr2b4EB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "de4c40ff"
+      },
+      "source": [
+        "## **Section 4: Modeling (From Scratch) (Pembuatan Model dari Dasar)**\n",
+        "\n",
+        "**Penjelasan:** Di sini kita akan membangun arsitektur CNN dasar. Arsitekturnya tidak perlu terlalu dalam, tetapi harus mengikuti praktik terbaik untuk menjadi baseline yang baik."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "165289d7"
+      },
+      "source": [
+        "### **4.1. Build the CNN Architecture (Membangun Arsitektur CNN)**\n",
+        "\n",
+        "**Penjelasan:** Menggunakan Keras Sequential API untuk mendefinisikan lapisan-lapisan model CNN, termasuk lapisan konvolusi, pooling, normalisasi batch, flatten, dense, dan dropout."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c874c02a",
+        "outputId": "e43f89a9-ebee-4c36-efc1-444d9c13282f"
+      },
+      "source": [
+        "# Build the CNN Model\n",
+        "model = Sequential()\n",
+        "\n",
+        "# Input Layer\n",
+        "model.add(InputLayer(input_shape=(IMG_HEIGHT, IMG_WIDTH, CHANNELS)))\n",
+        "\n",
+        "# Block 1\n",
+        "model.add(Conv2D(32, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "\n",
+        "# Block 2\n",
+        "model.add(Conv2D(64, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "\n",
+        "# Block 3\n",
+        "model.add(Conv2D(128, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "\n",
+        "# Flatten Layer\n",
+        "model.add(Flatten())\n",
+        "\n",
+        "# Dense Layers\n",
+        "model.add(Dense(128, activation='relu'))\n",
+        "model.add(Dropout(0.5)) # Strong regularization\n",
+        "\n",
+        "# Output Layer\n",
+        "model.add(Dense(NUM_CLASSES, activation='softmax'))"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/input_layer.py:27: UserWarning: Argument `input_shape` is deprecated. Use `shape` instead.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6e681d98"
+      },
+      "source": [
+        "### **4.2. Compile the Model (Kompilasi Model)**\n",
+        "\n",
+        "**Penjelasan:** Mengkonfigurasi model untuk pelatihan dengan menentukan optimizer (Adam), fungsi loss (categorical_crossentropy karena ini klasifikasi multi-kelas), dan metrik evaluasi (accuracy)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "328bdc90"
+      },
+      "source": [
+        "# Compile the model\n",
+        "model.compile(optimizer=Adam(),\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4c92baaa"
+      },
+      "source": [
+        "### **4.3. Display Model Summary (Tampilkan Rangkuman Model)**\n",
+        "\n",
+        "**Penjelasan:** Menampilkan ringkasan arsitektur model, termasuk jumlah parameter di setiap lapisan."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "10d0b431"
+      },
+      "source": [
+        "# Display model summary\n",
+        "model.summary()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sDa10w9QfM5C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e0274efe"
+      },
+      "source": [
+        "## **Section 0: Initial Setup (Pengaturan Awal)**\n",
+        "\n",
+        "**Penjelasan:** Menginstal dan menyiapkan semua dependencies krusial dari ekosistem Hugging Face yang tidak terinstal secara default di Colab."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "58a07637"
+      },
+      "source": [
+        "### 0.1. Install Core Libraries (Instalasi Library Inti)\n",
+        "\n",
+        "**Penjelasan:** Menginstal `transformers`, `datasets`, dan `accelerate` untuk memastikan kompatibilitas penuh dengan ekosistem Hugging Face."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ab316e27"
+      },
+      "source": [
+        "# Install Hugging Face libraries\n",
+        "!pip install transformers datasets accelerate"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b1db929b"
+      },
+      "source": [
+        "### 0.2. Mount Google Drive (Menghubungkan Google Drive)\n",
+        "\n",
+        "**Penjelasan:** Menghubungkan notebook ini dengan akun Google Drive Anda. Ini diperlukan agar notebook dapat membaca file dataset gambar yang telah Anda simpan di Google Drive. Setelah menjalankan sel ini, ikuti instruksi otorisasi yang muncul."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b13bf5b2"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
