--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNqtmDkksfhHGNr4KnIot1l",
+      "authorship_tag": "ABX9TyMQY7Oh7Yg126TsvjO8Bqqc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2550,6 +2550,94 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mK0WBPHEga7h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "33369d9f"
+      },
+      "source": [
+        "## **Section 1: Import Libraries and Global Configuration (Impor Library dan Konfigurasi Global)**\n",
+        "\n",
+        "**Penjelasan:** Mengimpor semua modul yang diperlukan dan mendefinisikan konstanta dan variabel konfigurasi yang akan digunakan di seluruh notebook."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5ee9289e"
+      },
+      "source": [
+        "### **1.1. Import Libraries (Impor Library)**\n",
+        "\n",
+        "**Penjelasan:** Mengimpor library standar seperti tensorflow, numpy, matplotlib, os, zipfile, sklearn.metrics, serta library spesifik Hugging Face seperti datasets dan transformers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f6994f13"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import zipfile\n",
+        "import glob # To list files\n",
+        "import shutil # To manage directories\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "import seaborn as sns # For confusion matrix visualization\n",
+        "\n",
+        "# Hugging Face Libraries\n",
+        "from datasets import load_dataset, DatasetDict\n",
+        "from transformers import AutoImageProcessor, TFAutoModelForImageClassification"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c400b896"
+      },
+      "source": [
+        "### **1.2. Define Global Configurations (Definisi Konfigurasi Global)**\n",
+        "\n",
+        "**Penjelasan:** Mendefinisikan variabel-variabel konfigurasi yang akan digunakan di seluruh notebook, termasuk path ke dataset, model checkpoint ViT, ukuran gambar, ukuran batch, dan jumlah epoch."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "397887eb"
+      },
+      "source": [
+        "# Define Directory Paths (Definisi Path Direktori)\n",
+        "# Path ke file zip di Google Drive\n",
+        "ZIP_PATH = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip'\n",
+        "# Path untuk mengekstrak dan menata ulang data agar sesuai format datasets.load_dataset('imagefolder')\n",
+        "EXTRACT_PATH = '/content/processed_dataset_hf' # Using a new path to avoid conflict with previous processed data\n",
+        "\n",
+        "# Define Model and Training Parameters (Definisi Parameter Model dan Pelatihan)\n",
+        "MODEL_CHECKPOINT = \"google/vit-base-patch16-224\" # Pre-trained ViT model from Hugging Face\n",
+        "IMG_SIZE = 224 # Standard input size for this ViT model\n",
+        "BATCH_SIZE = 32\n",
+        "EPOCHS = 10 # Start with a smaller number of epochs for fine-tuning\n",
+        "# NUM_CLASSES will be determined by the dataset later\n",
+        "NUM_CLASSES = None # Placeholder"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
