--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -4195,6 +4195,7 @@
             "0bb56cf1fffd4eae8a6f627eaa2fd2ec"
           ]
         },
+        "collapsed": true,
         "id": "a2287709",
         "outputId": "26bea172-a7af-4628-8f27-21ced02e642f"
       },
@@ -4336,7 +4337,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e5304fb0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e5304fb0",
+        "outputId": "27f4365d-eb66-46c0-816e-8c6f8e2abea7"
       },
       "source": [
         "# The 'imagefolder' dataset automatically assigns integer labels.\n",
@@ -4356,8 +4361,18 @@
         "print(f\"label2id mapping example: {list(label2id.items())[:10]}...\")\n",
         "print(f\"id2label mapping example: {list(id2label.items())[:10]}...\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Identified 53 classes.\n",
+            "label2id mapping example: [('5221911012', 0), ('5221911025', 1), ('5231811002', 2), ('5231811004', 3), ('5231811005', 4), ('5231811006', 5), ('5231811007', 6), ('5231811008', 7), ('5231811009', 8), ('5231811010', 9)]...\n",
+            "id2label mapping example: [(0, '5221911012'), (1, '5221911025'), (2, '5231811002'), (3, '5231811004'), (4, '5231811005'), (5, '5231811006'), (6, '5231811007'), (7, '5231811008'), (8, '5231811009'), (9, '5231811010')]...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
