--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOy7iGJCaeYm7/tK1heXNoV",
+      "authorship_tag": "ABX9TyMBtNG8G6lH1kI3MKkYAMl5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4005,7 +4004,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 713
+          "height": 628
         },
         "id": "i1IepW6UapU8",
         "outputId": "da963408-40b3-4c6b-fa7e-3ea05f44e4d5"
@@ -4050,7 +4049,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 664
+          "height": 584
         },
         "id": "6398b95f",
         "outputId": "74b21a7b-1c1f-4d3f-e007-e18c3e8e6d93"
@@ -4388,18 +4387,66 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d162b33f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d162b33f",
+        "outputId": "a2ad8a2e-b8fb-4e55-82ee-32675ea490d1"
       },
       "source": [
-        "from transformers import AutoImageProcessor\n",
-        "\n",
         "print(f\"Loading image processor for {MODEL_CHECKPOINT}...\")\n",
         "processor = AutoImageProcessor.from_pretrained(MODEL_CHECKPOINT)\n",
         "print(\"Image processor loaded successfully.\")\n",
         "print(processor) # Display processor details"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Loading image processor for google/vit-base-patch16-224...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Fast image processor class <class 'transformers.models.vit.image_processing_vit_fast.ViTImageProcessorFast'> is available for this model. Using slow image processor class. To use the fast image processor class set `use_fast=True`.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image processor loaded successfully.\n",
+            "ViTImageProcessor {\n",
+            "  \"do_convert_rgb\": null,\n",
+            "  \"do_normalize\": true,\n",
+            "  \"do_rescale\": true,\n",
+            "  \"do_resize\": true,\n",
+            "  \"image_mean\": [\n",
+            "    0.5,\n",
+            "    0.5,\n",
+            "    0.5\n",
+            "  ],\n",
+            "  \"image_processor_type\": \"ViTImageProcessor\",\n",
+            "  \"image_std\": [\n",
+            "    0.5,\n",
+            "    0.5,\n",
+            "    0.5\n",
+            "  ],\n",
+            "  \"resample\": 2,\n",
+            "  \"rescale_factor\": 0.00392156862745098,\n",
+            "  \"size\": {\n",
+            "    \"height\": 224,\n",
+            "    \"width\": 224\n",
+            "  }\n",
+            "}\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
